--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
+    "@react-stately/data": "^3.11.6",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "1.95.4",
+    "axios": "^1.7.7",
+    "bignumber.js": "^9.1.2",
+    "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "ed25519-hd-key": "^1.3.0",
+    "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "tailwind-merge": "^2.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
