--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
+    "@metaplex-foundation/umi": "^1.0.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
     "@react-stately/data": "^3.11.6",
     "@solana/spl-token": "^0.4.9",
@@ -24,6 +27,7 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "xlsx": "^0.18.5"
   },
